--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-
-# H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:greendb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+ 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
 
-# H2 Console Configuration
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# default path: h2-console
+spring.h2.console.path=/h2-ui
+
+jwt.secret=AnushikhaLNU
+spring.security.crypto.password.encoder=pbkdf2sha256
